tests/functional/lang/eval-fail-catAttrs-1.err.exp
error:
       … while calling the 'catAttrs' builtin
         at /pwd/lang/eval-fail-catAttrs-1.nix:1:1:
            1| builtins.catAttrs [ ] { }
             | ^
            2|

       … while evaluating the first argument passed to builtins.catAttrs

       error: expected a string but found a list: [ ]
